--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				<section id="header" class="skel-layers-fixed">
 					<header>
 						<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-						<h1 id="logo"><a href="#">Willis Corto</a></h1>
-						<p>I got reprogrammed by a rogue AI<br />
-						and now I'm totally cray</p>
+						<h1 id="logo"><a href="#">林泽煜</a></h1>
+						<p>想一千次，不如去做一次。<br />
+						华丽的跌倒，胜过无谓的徘徊。</p>
 					</header>
 					<nav id="nav">
 						<ul>
